Thu Oct 13 17:50:19 1994  Theodore Y. Ts'o  (tytso@dcl)

	* md5.c (UL): Add the UL macro to control how unsigned long
		constants are compiled.  If we have an ANSI C environment,
		use the UL suffix to keep the compiler from warning about
		numbers that would overflow a signed long.

Tue Oct  4 14:55:10 1994  Theodore Y. Ts'o  (tytso@dcl)

	* md5crypto.c:
	* md5glue.c: Added placeholder for magic number.

